--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a former news video editor studying to become a web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Florida</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>basketball and video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>startiing center for the Miami Heat/p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Port Saint Lucie</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>to further my career and break into a new medium </p>
     </section>
 
     <footer id="footer">
